# Embarque-ja-fastApi

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  requirements.txt
alembic/: env.py
alembic/versions/: 47f2aa9bf4d9_inital_migration.py  f3271582ec93_inital_migrations.py
app/: main.py
app/controller/: UserController.py
app/core/: config.py
app/database/: session.py
app/model/: AssociateTables.py  ClienteModel.py  EmbarqueModel.py  EnderecoModel.py  ExcursaoModel.py  OnibusModel.py  ReservaModel.py  UserModel.py  __init__.py
app/model/base/: BaseModels.py
app/model/enums/: StatusAssento.py  StatusViagem.py
app/schemas/: UserSchema.py
app/service/: UserService.py
embarqueja-fast/: pyproject.toml
embarqueja-fast/embarqueja_fast/: Models.py  app.py  database.py  schema.py  security.py
embarqueja-fast/migrations/: env.py
embarqueja-fast/migrations/versions/: 332d0d3335ca_add_user_model.py
embarqueja-fast/tests/: conftest.py  test_app.py  test_security.py
